// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Convert file: 1`] = `
{
  "database": "",
  "extraFields": {},
  "host": undefined,
  "password": undefined,
  "port": undefined,
  "schema": undefined,
  "socket": undefined,
  "ssl": false,
  "type": "sqlite",
  "uri": "file:",
  "user": undefined,
}
`;

exports[`Convert file: 2`] = `"file:"`;

exports[`Convert file:../../parent-parent-dev.db 1`] = `
{
  "database": "parent-parent-dev.db",
  "extraFields": {},
  "host": undefined,
  "password": undefined,
  "port": undefined,
  "schema": undefined,
  "socket": undefined,
  "ssl": false,
  "type": "sqlite",
  "uri": "file:../../parent-parent-dev.db",
  "user": undefined,
}
`;

exports[`Convert file:../../parent-parent-dev.db 2`] = `"file:../../parent-parent-dev.db"`;

exports[`Convert file:../parent-dev.db 1`] = `
{
  "database": "parent-dev.db",
  "extraFields": {},
  "host": undefined,
  "password": undefined,
  "port": undefined,
  "schema": undefined,
  "socket": undefined,
  "ssl": false,
  "type": "sqlite",
  "uri": "file:../parent-dev.db",
  "user": undefined,
}
`;

exports[`Convert file:../parent-dev.db 2`] = `"file:../parent-dev.db"`;

exports[`Convert file:./current-dev.db 1`] = `
{
  "database": "current-dev.db",
  "extraFields": {},
  "host": undefined,
  "password": undefined,
  "port": undefined,
  "schema": undefined,
  "socket": undefined,
  "ssl": false,
  "type": "sqlite",
  "uri": "file:./current-dev.db",
  "user": undefined,
}
`;

exports[`Convert file:./current-dev.db 2`] = `"file:./current-dev.db"`;

exports[`Convert file:/absolute-dev.db 1`] = `
{
  "database": "absolute-dev.db",
  "extraFields": {},
  "host": undefined,
  "password": undefined,
  "port": undefined,
  "schema": undefined,
  "socket": undefined,
  "ssl": false,
  "type": "sqlite",
  "uri": "file:/absolute-dev.db",
  "user": undefined,
}
`;

exports[`Convert file:/absolute-dev.db 2`] = `"file:/absolute-dev.db"`;

exports[`Convert file:dev.db 1`] = `
{
  "database": "dev.db",
  "extraFields": {},
  "host": undefined,
  "password": undefined,
  "port": undefined,
  "schema": undefined,
  "socket": undefined,
  "ssl": false,
  "type": "sqlite",
  "uri": "file:dev.db",
  "user": undefined,
}
`;

exports[`Convert file:dev.db 2`] = `"file:dev.db"`;

exports[`Convert mongodb://mongodb0.example.com:27017/admin 1`] = `
{
  "type": "mongodb",
  "uri": "mongodb://mongodb0.example.com:27017/admin",
}
`;

exports[`Convert mongodb://mongodb0.example.com:27017/admin 2`] = `"mongodb://mongodb0.example.com:27017/admin"`;

exports[`Convert mongodb://myDBReader:D1fficultP%40ssw0rd@mongodb0.example.com:27017/admin 1`] = `
{
  "type": "mongodb",
  "uri": "mongodb://myDBReader:D1fficultP%40ssw0rd@mongodb0.example.com:27017/admin",
}
`;

exports[`Convert mongodb://myDBReader:D1fficultP%40ssw0rd@mongodb0.example.com:27017/admin 2`] = `"mongodb://myDBReader:D1fficultP%40ssw0rd@mongodb0.example.com:27017/admin"`;

exports[`Convert mysql://root@localhost/db?socket=/private/tmp/mysql.sock 1`] = `
{
  "database": "db",
  "extraFields": {},
  "host": "localhost",
  "password": undefined,
  "port": undefined,
  "schema": undefined,
  "socket": "/private/tmp/mysql.sock",
  "ssl": false,
  "type": "mysql",
  "uri": "mysql://root@localhost/db?socket=/private/tmp/mysql.sock",
  "user": "root",
}
`;

exports[`Convert mysql://root@localhost/db?socket=/private/tmp/mysql.sock 2`] = `"mysql://root@localhost/db?socket=%2Fprivate%2Ftmp%2Fmysql.sock"`;

exports[`Convert mysql://user:password@localhost:3333 1`] = `
{
  "database": undefined,
  "extraFields": {},
  "host": "localhost",
  "password": "password",
  "port": 3333,
  "schema": undefined,
  "socket": undefined,
  "ssl": false,
  "type": "mysql",
  "uri": "mysql://user:password@localhost:3333",
  "user": "user",
}
`;

exports[`Convert mysql://user:password@localhost:3333 2`] = `"mysql://user:password@localhost:3333"`;

exports[`Convert mysql://user:specialatchar@password@localhost:3333 1`] = `
{
  "database": undefined,
  "extraFields": {},
  "host": "localhost",
  "password": "specialatchar%40password",
  "port": 3333,
  "schema": undefined,
  "socket": undefined,
  "ssl": false,
  "type": "mysql",
  "uri": "mysql://user:specialatchar@password@localhost:3333",
  "user": "user",
}
`;

exports[`Convert mysql://user:specialatchar@password@localhost:3333 2`] = `"mysql://user:specialatchar%40password@localhost:3333"`;

exports[`Convert mysql://user@localhost:3333 1`] = `
{
  "database": undefined,
  "extraFields": {},
  "host": "localhost",
  "password": undefined,
  "port": 3333,
  "schema": undefined,
  "socket": undefined,
  "ssl": false,
  "type": "mysql",
  "uri": "mysql://user@localhost:3333",
  "user": "user",
}
`;

exports[`Convert mysql://user@localhost:3333 2`] = `"mysql://user@localhost:3333"`;

exports[`Convert mysql://user@localhost:3333/dbname 1`] = `
{
  "database": "dbname",
  "extraFields": {},
  "host": "localhost",
  "password": undefined,
  "port": 3333,
  "schema": undefined,
  "socket": undefined,
  "ssl": false,
  "type": "mysql",
  "uri": "mysql://user@localhost:3333/dbname",
  "user": "user",
}
`;

exports[`Convert mysql://user@localhost:3333/dbname 2`] = `"mysql://user@localhost:3333/dbname"`;

exports[`Convert mysql://user@localhost:3333/dbname?sslmode=prefer 1`] = `
{
  "database": "dbname",
  "extraFields": {
    "sslmode": "prefer",
  },
  "host": "localhost",
  "password": undefined,
  "port": 3333,
  "schema": undefined,
  "socket": undefined,
  "ssl": true,
  "type": "mysql",
  "uri": "mysql://user@localhost:3333/dbname?sslmode=prefer",
  "user": "user",
}
`;

exports[`Convert mysql://user@localhost:3333/dbname?sslmode=prefer 2`] = `"mysql://user@localhost:3333/dbname?sslmode=prefer"`;

exports[`Convert postgresql:// 1`] = `
{
  "database": undefined,
  "extraFields": {},
  "host": undefined,
  "password": undefined,
  "port": undefined,
  "schema": "public",
  "socket": undefined,
  "ssl": false,
  "type": "postgresql",
  "uri": "postgresql://",
  "user": undefined,
}
`;

exports[`Convert postgresql:// 2`] = `"postgresql://?schema=public"`;

exports[`Convert postgresql://localhost 1`] = `
{
  "database": undefined,
  "extraFields": {},
  "host": "localhost",
  "password": undefined,
  "port": undefined,
  "schema": "public",
  "socket": undefined,
  "ssl": false,
  "type": "postgresql",
  "uri": "postgresql://localhost",
  "user": undefined,
}
`;

exports[`Convert postgresql://localhost 2`] = `"postgresql://localhost?schema=public"`;

exports[`Convert postgresql://localhost/mydb 1`] = `
{
  "database": "mydb",
  "extraFields": {},
  "host": "localhost",
  "password": undefined,
  "port": undefined,
  "schema": "public",
  "socket": undefined,
  "ssl": false,
  "type": "postgresql",
  "uri": "postgresql://localhost/mydb",
  "user": undefined,
}
`;

exports[`Convert postgresql://localhost/mydb 2`] = `"postgresql://localhost/mydb?schema=public"`;

exports[`Convert postgresql://localhost:5433 1`] = `
{
  "database": undefined,
  "extraFields": {},
  "host": "localhost",
  "password": undefined,
  "port": 5433,
  "schema": "public",
  "socket": undefined,
  "ssl": false,
  "type": "postgresql",
  "uri": "postgresql://localhost:5433",
  "user": undefined,
}
`;

exports[`Convert postgresql://localhost:5433 2`] = `"postgresql://localhost:5433?schema=public"`;

exports[`Convert postgresql://localhost:5433?schema=production 1`] = `
{
  "database": undefined,
  "extraFields": {},
  "host": "localhost",
  "password": undefined,
  "port": 5433,
  "schema": "production",
  "socket": undefined,
  "ssl": false,
  "type": "postgresql",
  "uri": "postgresql://localhost:5433?schema=production",
  "user": undefined,
}
`;

exports[`Convert postgresql://localhost:5433?schema=production 2`] = `"postgresql://localhost:5433?schema=production"`;

exports[`Convert postgresql://other@localhost/otherdb?schema=my_schema&connect_timeout=10&application_name=myapp 1`] = `
{
  "database": "otherdb",
  "extraFields": {
    "application_name": "myapp",
    "connect_timeout": "10",
  },
  "host": "localhost",
  "password": undefined,
  "port": undefined,
  "schema": "my_schema",
  "socket": undefined,
  "ssl": false,
  "type": "postgresql",
  "uri": "postgresql://other@localhost/otherdb?schema=my_schema&connect_timeout=10&application_name=myapp",
  "user": "other",
}
`;

exports[`Convert postgresql://other@localhost/otherdb?schema=my_schema&connect_timeout=10&application_name=myapp 2`] = `"postgresql://other@localhost/otherdb?schema=my_schema&connect_timeout=10&application_name=myapp"`;

exports[`Convert postgresql://root:prisma@localhost/prisma?host=/var/run/postgresql/ 1`] = `
{
  "database": "prisma",
  "extraFields": {
    "host": "/var/run/postgresql/",
  },
  "host": "localhost",
  "password": "prisma",
  "port": undefined,
  "schema": "public",
  "socket": undefined,
  "ssl": false,
  "type": "postgresql",
  "uri": "postgresql://root:prisma@localhost/prisma?host=/var/run/postgresql/",
  "user": "root",
}
`;

exports[`Convert postgresql://root:prisma@localhost/prisma?host=/var/run/postgresql/ 2`] = `"postgresql://root:prisma@localhost/prisma?schema=public&host=%2Fvar%2Frun%2Fpostgresql%2F"`;

exports[`Convert postgresql://user:secret@localhost 1`] = `
{
  "database": undefined,
  "extraFields": {},
  "host": "localhost",
  "password": "secret",
  "port": undefined,
  "schema": "public",
  "socket": undefined,
  "ssl": false,
  "type": "postgresql",
  "uri": "postgresql://user:secret@localhost",
  "user": "user",
}
`;

exports[`Convert postgresql://user:secret@localhost 2`] = `"postgresql://user:secret@localhost?schema=public"`;

exports[`Convert postgresql://user:secret@localhost?sslmode=prefer 1`] = `
{
  "database": undefined,
  "extraFields": {
    "sslmode": "prefer",
  },
  "host": "localhost",
  "password": "secret",
  "port": undefined,
  "schema": "public",
  "socket": undefined,
  "ssl": true,
  "type": "postgresql",
  "uri": "postgresql://user:secret@localhost?sslmode=prefer",
  "user": "user",
}
`;

exports[`Convert postgresql://user:secret@localhost?sslmode=prefer 2`] = `"postgresql://user:secret@localhost?schema=public&sslmode=prefer"`;

exports[`Convert postgresql://user@localhost 1`] = `
{
  "database": undefined,
  "extraFields": {},
  "host": "localhost",
  "password": undefined,
  "port": undefined,
  "schema": "public",
  "socket": undefined,
  "ssl": false,
  "type": "postgresql",
  "uri": "postgresql://user@localhost",
  "user": "user",
}
`;

exports[`Convert postgresql://user@localhost 2`] = `"postgresql://user@localhost?schema=public"`;
